[project]
name = "DSTS"
version = "0.0.2"
authors = [
  { name="Changwook Lee", email="changwook1410@gmail.com" },
]
description = "official Python package implementation of the paper Doubly Structured Data Synthesis for Time-series Energy Use Data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/chomgid/DSTS/tree/main"
